--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,6 +1,13 @@
----
 collections:
-  - ansible.posix
-  - amazon.aws
-  - cisco.ios
-  - community.general
+- name: ansible-posix-1.3.0.tar.gz
+  version: 1.3.0
+- name: amazon-aws-3.0.0.tar.gz
+  version: 3.0.0
+- name: cisco-ios-2.6.0.tar.gz
+  version: 2.6.0
+- name: ansible-netcommon-2.5.0.tar.gz
+  version: 2.5.0
+- name: ansible-utils-2.4.3.tar.gz
+  version: 2.4.3
+- name: community-general-4.3.0.tar.gz
+  version: 4.3.0
