--- a/playbooks/pause.yml
+++ b/playbooks/pause.yml
@@ -2,5 +2,9 @@
 - hosts: all
   gather_facts: false
   tasks:
+    - ping:
+
     - pause:
         seconds: "{{ sleep | default(5) }}"
+
+    - ping:
