--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,13 +1,13 @@
 collections:
-- name: ansible-posix-1.3.0.tar.gz
+- name: ansible.posix
   version: 1.3.0
-- name: amazon-aws-3.0.0.tar.gz
+- name: amazon.aws
   version: 3.0.0
-- name: cisco-ios-2.6.0.tar.gz
+- name: cisco.ios
   version: 2.6.0
-- name: ansible-netcommon-2.5.0.tar.gz
+- name: ansible.netcommon
   version: 2.5.0
-- name: ansible-utils-2.4.3.tar.gz
+- name: ansible.utils
   version: 2.4.3
-- name: community-general-4.3.0.tar.gz
+- name: community.general
   version: 4.3.0
