--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "subproject-a"]
-	path = subproject-a
-	url = https://github.com/saito-hideki/demo-ansible-subproject-a.git
+#[submodule "subproject-a"]
+#	path = subproject-a
+#	url = https://github.com/saito-hideki/demo-ansible-subproject-a.git
