--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -4,5 +4,5 @@ collections:
 - name: cisco.ios
 - name: ansible.netcommon
 - name: ansible.utils
-- name: servicenow.servicenow
+- name: servicenow.itsm
 - name: awx.awx
