Modify vars for server_group_a

--- a/inventories/test_inventory.ini
+++ b/inventories/test_inventory.ini
@@ -7,3 +7,7 @@ server2.example.com
 server10.example.com
 server11.example.com
 server12.example.com
+
+[server_group_a:vars]
+_awx_description="TESTING"
+foo="HELLO"
