--- a/inventories/test_inventory.ini
+++ b/inventories/test_inventory.ini
@@ -9,5 +9,5 @@ server11.example.com
 server12.example.com
 
 [server_group_a:vars]
-_awx_description="TESTING"
+_awx_description="TESTING GROUP_A"
 foo="HELLO"
