--- a/inventories/test_inventory.ini
+++ b/inventories/test_inventory.ini
@@ -1,5 +1,5 @@
 [server_group_a]
-server0.example.com _awx_description="TESTING"
+server0.example.com _awx_description="TESTING00"
 server1.example.com
 server2.example.com
 
