comminity.general version specified

--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,6 +1,7 @@
 collections:
 - name: ansible.posix
 - name: community.general
+  version: 4.4.0
 #- name: amazon.aws
 #- name: cisco.ios
 #- name: ansible.netcommon
