--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,6 +1,7 @@
 collections:
 - name: ansible.posix
 - name: community.general
+- name: fortinet.fortimanager
 #- name: amazon.aws
 #- name: cisco.ios
 #- name: ansible.netcommon
