Fix facts in fortimanager_test.yml

--- a/playbooks/fortimanager_test.yml
+++ b/playbooks/fortimanager_test.yml
@@ -4,4 +4,5 @@
 
   tasks:
     - fortinet.fortimanager.fmgr_fact:
-        facts: system_interface
+        facts:
+          selector: 'pkg_firewall_policy'
