Removed enable_plugins section

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,4 +3,4 @@ deprecation_warnings = False
 host_key_checking = False
 
 [inventory]
-enable_plugins = servicenow.itsm.now
+#enable_plugins = servicenow.itsm.now
