--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,5 +2,5 @@
 deprecation_warnings = False
 host_key_checking = False
 
-[inventory]
-enable_plugins = servicenow.itsm.now
+#[inventory]
+#enable_plugins = servicenow.itsm.now
