--- a/playbooks/sudoers.yml
+++ b/playbooks/sudoers.yml
@@ -5,7 +5,7 @@
   tasks:
   - name: Update sudoers
     community.general.sudoers:
-      name: antogx_sudo_access
+      name: awx_sudo_access
       state: present
       user: redhat
       runas: root
