--- a/inventories/test_inventory.ini
+++ b/inventories/test_inventory.ini
@@ -4,9 +4,14 @@ server1.example.com
 server2.example.com
 
 [server_group_b]
+_awx_description="TESTING GROUP_A"
 server10.example.com
 server20.example.com
 
 [server_group_a:vars]
 _awx_description="TESTING GROUP_A"
 foo="HELLO"
+
+[server_group_b:vars]
+_awx_description="TESTING GROUP_B"
+bar="HELLO"
