--- a/inventories/test_inventory.ini
+++ b/inventories/test_inventory.ini
@@ -11,3 +11,7 @@ server20.example.com
 [server_group_a:vars]
 _awx_description="TESTING GROUP_A"
 foo="HELLO"
+
+[server_group_b:vars]
+_awx_description="TESTING GROUP_b"
+bar="HELLO"
