Disable rhel_systemroles
Signed-off-by: Hideki Saito <saito@fgrep.org>

--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -11,4 +11,4 @@ collections:
 #- name: ansible.utils
 #- name: servicenow.itsm
 #- name: ansible.controller
-- name: redhat.rhel_system_roles
+#- name: redhat.rhel_system_roles
